--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Platzi Blog</title>
   </head>
-  <body></body>
+  <body>
+    <header id="header"></header>
+    <main id="content"></main>
+    <footer id="footer"></footer>
+  </body>
 </html>
