:art: reestructure of router and render of page

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,6 @@
     <title>Mi Blog</title>
   </head>
   <body>
-    <header id="header"></header>
-    <main id="content"></main>
-    <footer id="footer"></footer>
+    <div id="app"></div>
   </body>
 </html>
