--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi Blog</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body id="app">
+    <div></div>
   </body>
 </html>
